--- a/karya3.html
+++ b/karya3.html
@@ -71,30 +71,38 @@ Dan segalanya; perlahan, berganti.<br>
 <p>
 Hadirmu ada, bukan karena kupinta.<br>
 Namun semesta menaruhmu,<br>
-  pada garis takdirku.<br>
+pada garis takdirku.<br>
 Bagai takdir yang datang tanpa aba aba,<br>
-namun menjelma keajaiban yang tak pernah kupeluk sebelumnya.<br>
-Dalam tatapanmu, aku menemukan arti pulang,<br>
-dalam genggammu, kutemukan tenang.<br>
+namun menjelma keajaiban<br>
+yang tak pernah kupeluk sebelumnya.<br>
+</p>
+
+<p>
+Dalam tatapanmu, aku menemukan arti pulang.<br>
+Dalam genggammu, kutemukan tenang.<br>
 </p>
 
 <p>
 Kupanggil engkau Semestaku;<br>
 bukan hanya sekadar nama.<br>
-Karena bagiku; hadirmu membentang<br>
-seperti angkasa yang tak berbatas,<br>
-dan jiwamu bercahaya, seperti bintang<br>
+Karena bagiku; hadirmu membentang luas<br>
+laksana angkasa yang tak berbatas.<br>
+Dan jiwamu bercahaya, terang seperti bintang<br>
 pada gelap yang paling pekat.<br>
-Kamu adalah matahari yang selalu setia,<br>
+Kamu, adalah matahari yang selalu setia,<br>
 mengusir dingin dari pagi pagi yang hampa.<br>
 </p>
 
 <p>
-Satu tahun lebih, kita telah bersama.<br>
+Satu tahun lebih sudah, kita telah bersama.<br>
 Mengarungi gelombang waktu,<br>
-melewati ombak ragu, menguatkan langkah<br>
-di jalan yang tak selalu rata.<br> 
-Dan aku melihatmu dalam segala bentuk keindahan.<br>
+melewati ombak ragu,<br>
+menguatkan langkah di jalan<br>
+yang terkadang, tak selalu rata.<br> 
+</p> 
+
+    <p>Dan aku telah melihatmu<br>
+dalam segala bentuk keindahanmu.<br>
 Dalam senyuman kecilmu,<br>
 dalam perhatian perhatian sederhana<br>
 yang kau sisipkan tanpa diminta,<br>
@@ -104,10 +112,10 @@ saat dunia terasa melelahkan.<br>
 </p>
 
 <p>
-Bagaimana mungkin<br>
+Bagaimana mungkin,<br>
 aku tidak mencintaimu sedalam ini?<br>
-Jika setiap hela nafasku ada karena hadirmu ?<br>
-Juga detik dan detaknya jantungku,<br>
+Bila setiap hela nafasku ada karena hadirmu ?<br>
+Serta detik dan detaknya jantungku,<br>
 seirama namamu ?<br>
 </p>
 
